fix: remove account status from user
